<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_signup"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_title"
        android:textStyle="bold"
        android:text="Sign Up"
        android:textSize="35dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_margin="25dp"/>

    <EditText

        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_title"
        android:layout_marginStart="11dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="11dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/baseline_person_outline_24"
        android:drawablePadding="10dp"
        android:hint="@string/user_name"
        android:inputType="text"
        android:padding="20dp"
        android:textColorHint="@color/white" />


    <EditText
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name"
        android:layout_marginStart="11dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="11dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="10dp"
        android:hint="@string/user_email"
        android:inputType="text"
        android:padding="20dp"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_email"
        android:layout_marginStart="11dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="11dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/baseline_info_24"
        android:drawablePadding="10dp"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/re_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginStart="11dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="11dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/baseline_info_24"
        android:drawablePadding="10dp"
        android:hint="@string/user_re_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/re_password"
        android:layout_alignParentRight="true"
        android:layout_marginTop="11dp"
        android:backgroundTint="#1588E3"
        android:text="@string/register"
        android:layout_margin="10dp"
        android:textSize="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info"
        android:text="@string/sign_up_with"
        android:layout_above="@+id/socialIcon"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:layout_margin="20dp"
        android:textSize="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/socialIcon"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center">
        
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/google"
            android:contentDescription="google" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/fb"
            android:contentDescription="fb"/>

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/twitter"
            android:contentDescription="twitter"/>

    </LinearLayout>

</RelativeLayout>